...
                Spacer(Modifier.height(8.dp))
                Text(
                    color = Color(0xFF2C3E50),
                    text = selectedNews!!.title,
                    style = MaterialTheme.typography.headlineSmall,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.testTag("details_title").padding(top = 16.dp).padding(bottom = 8.dp)
                )
                Text(
                    text = selectedNews!!.snippet,
                    fontSize = 16.sp,
                    style = MaterialTheme.typography.bodyMedium,
                    modifier = Modifier.testTag("details_snippet")
                )
                Spacer(Modifier.fillMaxWidth())
                Spacer(Modifier.height(8.dp))
                Column(verticalArrangement = Arrangement.spacedBy(4.dp), modifier = Modifier.fillMaxWidth()) {
                    Text(
                        text = "Kategorija: ${selectedNews!!.category}",
...
                    Spacer(modifier = Modifier.height(2.dp))
                    Text(
                        text = "Izvor: ${selectedNews!!.source}",
                        style = MaterialTheme.typography.bodySmall,
                        color = Color.White,
                        fontSize = 14.sp,
                        modifier = Modifier.testTag("details_source").background(Color(90, 90, 160), shape = MaterialTheme.shapes.small).padding(horizontal = 5.dp, vertical = 5.dp)
                    )
                    Spacer(modifier = Modifier.height(2.dp))
                    Text(
                        text = "Datum objave: ${selectedNews!!.publishedDate}",
                        style = MaterialTheme.typography.bodySmall,
                        color = Color.White,
                        fontSize = 14.sp,
                        modifier = Modifier.testTag("details_date").background(Color(90, 90, 160), shape = MaterialTheme.shapes.small).padding(horizontal = 5.dp, vertical = 5.dp)
                    )
                    if (apiImageTags.isNotEmpty()) {
                        Spacer(modifier = Modifier.height(8.dp))
                        Text(
                            text = "Tagovi slike (Imagga API):",
                            fontSize = 16.sp,
...
                        fontSize = 15.sp,
                        shadow = Shadow(color = Color.Black.copy(alpha = 0.2f), offset = Offset(2f, 2f))
                    ),
                    color = MaterialTheme.colorScheme.primary,
                    modifier = Modifier
                        .clickable { navController.navigate("/details/${vijest.uuid}") }
                        .testTag(if (index == 0) "related_news_title_1" else "related_news_title_2")
                )
            }
        } else {
            Text(text = "Nema pronađenih sličnih vijesti u bazi (po tagovima).", style = MaterialTheme.typography.bodyMedium)
        }
    }
...
