...
        Pair("Sve", "filter_chip_all"),
        Pair("Politika", "filter_chip_pol"),
        Pair("Sport", "filter_chip_spo"),
        Pair("Umjetnost", "filter_chip_art"),
        Pair("Nauka", "filter_chip_sci"),
        Pair("Tehnologija", "filter_chip_tech"),
        Pair("Više filtera ...", "filter_chip_more")
    )

    val currentActiveIndex = remember(selectedCategory) {
        dugmici.indexOfFirst { it.first.equals(selectedCategory, ignoreCase = true) }
            .coerceAtLeast(0)
    }
...
